@startuml
'https://plantuml.com/class-diagram

!include Style.puml

hide circle

class SubCommand
class Timetable
class DeleteSubCommand
class ViewSubCommand
class UpdateSubCommand
class AddSubCommand
class Lesson
class Tutorial
class Lecture
class Lab
class TimetableStorage


SubCommand ^-- DeleteSubCommand
SubCommand ^-- ViewSubCommand
SubCommand ^-- AddSubCommand
SubCommand ^-- UpdateSubCommand

Lesson ^-- Lecture
Lesson ^-- Tutorial
Lesson ^-- Lab

AddSubCommand --> "*" Lesson
DeleteSubCommand --> "*" Lesson
UpdateSubCommand --> "*" Lesson
Timetable --> "1" TimetableStorage
Timetable --> "*" Lesson
Timetable --> "4" SubCommand

TimetableStorage --> "*" Lesson

class Timetable TIMETABLE_COLOR {
    + lessonStorage : ArrayList<Lesson>
    + timetableStorage : TimetableStorage
    - addSubCommand : AddSubCommand
    - deleteSubCommand : DeleteSubCommand
    - updateSubCommand : UpdateSubCommand
    - viewSubCommand : ViewSubCommand
    + executeAdd(parsedArguments : String[]) : void
    + executeUpdate(parsedArguments : String[]) : void
    + executeDelete(parsedArguments : String[]) : void
    + executeView(parsedArguments : String[]) : void
}

class TimetableStorage {
- lessonStorage : Lesson
+ writeToFile() : void
+ createFilePath(filePath:String) : void
+ clearFile() : void
}

class AddSubCommand {
}

class DeleteSubCommand {
}

class ViewSubCommand {
}

class UpdateSubCommand {
}



@enduml